Add simpler make file tutorial

--- a/02/01.md
+++ b/02/01.md
@@ -475,7 +475,7 @@ all : depend
 
 
 # Example
-Check out [this example](https://gist.github.com/maxtruxa/4b3929e118914ccef057f8a05c614b0f)
+Check out [this simple example](https://gist.github.com/BartG95/50686c7cd2f1f4da7a0c043bcdc436d6) or [this advanced example](https://gist.github.com/maxtruxa/4b3929e118914ccef057f8a05c614b0f)
 
 For example, consider the following declaration:
 ```make
